<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Langues"
    android:background="@drawable/bg4port">

    <TextView
        android:id="@+id/titre"
        android:layout_width="404dp"
        android:layout_height="128dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="300dp"
        android:fontFamily="@font/wds052801"
        android:text="@string/langues"
        android:textAlignment="center"
        android:textColor="#4527A0"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
    android:id="@+id/btnFran"
    android:layout_width="197dp"
    android:layout_height="48dp"
    android:layout_marginStart="107dp"
    android:layout_marginTop="93dp"
    android:layout_marginEnd="107dp"
    android:layout_marginBottom="362dp"
    android:fontFamily="@font/candybeans"
    android:text="@string/francais"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:textStyle="bold"
    app:backgroundTint="#f4acb8"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/titre" />

    <Button
        android:id="@+id/btnEng"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/candybeans"
        android:text="@string/anglais"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#f4acb8"
        app:layout_constraintBottom_toTopOf="@+id/btnEsp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFran" />

    <Button
        android:id="@+id/btnEsp"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="157dp"
        android:fontFamily="@font/candybeans"
        android:text="@string/espagnol"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#f4acb8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEng" />

    <ImageView
        android:id="@+id/quitter"
        android:layout_width="109dp"
        android:layout_height="77dp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/quitter"
        android:onClick="clicQuitter"
        android:src="@drawable/quitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre"
        tools:ignore="ImageContrastCheck,OnClick,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/retour"
        android:layout_width="97dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="43dp"
        android:src="@drawable/retour"
        android:onClick="clickRetour"
        app:layout_constraintBottom_toTopOf="@+id/titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="retour" />

    <TextView
        android:id="@+id/retourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="363dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/candybeans"
        android:text="@string/retour"
        android:textColor="#feb6c2"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retour" />


</androidx.constraintlayout.widget.ConstraintLayout>