<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoixJoueur"
    android:background="@drawable/choixjoueur_port">

    <ImageView
        android:id="@+id/quitter"
        android:layout_width="109dp"
        android:layout_height="77dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/quitter"
        android:onClick="clickQuitter"
        android:src="@drawable/quitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomjoueur"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/retourText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="603dp"
        android:fontFamily="@font/candybeans"
        android:text="@string/retour"
        android:textColor="#feb6c2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retour"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/titrechoixjoueur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="80dp"
        android:background="#d89a85"
        android:fontFamily="@font/wds052801"
        android:text="@string/ajout_d_un_joueur"
        android:textAlignment="center"
        android:textColor="#494871"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/entrernom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retour" />

    <EditText
        android:id="@+id/nomjoueur"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="53dp"
        android:autofillHints="Nom"
        android:background="#d89a85"
        android:inputType="text"
        android:maxLength="8"
        app:layout_constraintBottom_toTopOf="@+id/commencer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrernom"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/entrernom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="79dp"
        android:background="#d89a85"
        android:fontFamily="@font/candybeans"
        android:text="@string/entrez_votre_nom"
        android:textAlignment="center"
        android:textColor="#494871"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nomjoueur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titrechoixjoueur" />

    <Button
        android:id="@+id/commencer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="165dp"
        android:background="#494871"
        android:fontFamily="@font/candybeans"
        android:padding="2dp"
        android:text="@string/commencer"
        android:textColor="#d89a85"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomjoueur" />

    <ImageView
        android:id="@+id/retour"
        android:layout_width="91dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/retour"
        android:onClick="clickRetour"
        android:src="@drawable/retour"
        app:layout_constraintBottom_toTopOf="@+id/retourText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>