<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Debut_Partie"
    android:background="@drawable/bg4port"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="176dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/nomUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/wds052801"
            android:layout_marginStart="10dp"
            android:textColor="#f15da7"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/titre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/wds052801"
            android:text="@string/extrait_n"
            android:textAlignment="center"
            android:textColor="#f15da7"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/numeroExtrait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/wds052801"
            android:textAlignment="center"
            android:textColor="#f15da7"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/surExtrait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/wds052801"
            android:text="@string/sur_10"
            android:textAlignment="center"
            android:textColor="#f15da7"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="98dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/playbutton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/play"
            app:srcCompat="@drawable/playbutton3"
            tools:ignore="ImageContrastCheck"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/pause_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/pause_button3"
            android:visibility="gone"
            android:contentDescription="@string/pause" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reponse1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="82dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#001e52"
            android:fontFamily="@font/candybeans"
            android:textColor="#f15da7" />

        <Button
            android:id="@+id/reponse2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="82dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#001e52"
            android:fontFamily="@font/candybeans"
            android:textColor="#f15da7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reponse3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="82dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#001e52"
            android:fontFamily="@font/candybeans"
            android:textColor="#f15da7" />

        <Button
            android:id="@+id/reponse4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="82dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#001e52"
            android:fontFamily="@font/candybeans"
            android:textColor="#f15da7" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:layout_marginTop="120dp">

        <ImageView
            android:id="@+id/quitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/quitter"
            android:onClick="clickQuitter"
            app:srcCompat="@drawable/quitter"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>


</LinearLayout>